Quality of life update

--- a/index/index.html
+++ b/index/index.html
@@ -23,19 +23,19 @@
                 <a href="#" id="navHome" class="nav-link active"><span>Главная</span></a>
                 <a href="#" id="navCategories" class="nav-link"><span>Категории</span></a>
                 <a href="#" id="navFavorites" class="nav-link" style="display: none;"><span>Избранное</span></a>
-                <button class="creator-btn" id="creatorStudioBtn" style="display: none;"><span>Creator Studio</span></button>
-                <button class="settings-btn" id="settingsBtn"><span>Настройки</span></button>
+                <a class="nav-link" id="creatorStudioBtn" style="display: none;"><span>Creator Studio</span></a>
+                <a class="nav-link" id="settingsBtn"><span>Настройки</span></a>
             </nav>
             <nav class="main-nav" id="xcreatorNav" style="display: none;">
-                <button class="go-back-btn" id="backToXMusicBtn"><span>&#8592; Назад в XMusic</span></button>
-                <button class="creator-nav-btn active" id="creatorHomeBtn" style="display: none;"><span>Главная</span></button>
-                <button class="creator-nav-btn" id="myTracksBtn" style="display: none;"><span>Мои треки</span></button>
-                <button class="creator-nav-btn" id="analyticsBtn" style="display: none;"><span>Аналитика</span></button>
-                <button class="creator-nav-btn admin-section" id="adminApplicationsBtn" style="display: none;"><span>Заявки в Creator</span></button>
-                <button class="creator-nav-btn admin-section" id="adminUsersBtn" style="display: none;"><span>Аккаунты</span></button>
-                <button class="creator-nav-btn admin-section" id="adminModerationBtn" style="display: none;"><span>Треки на модерации</span></button>
-                <button class="creator-nav-btn admin-section" id="adminStatsBtn" style="display: none;"><span>Статистика</span></button>
-                <button class="creator-nav-btn admin-section" id="adminCategoriesBtn" style="display: none;"><span>Категории</span></button>
+                <a class="go-back-btn" id="backToXMusicBtn"><span>&#8592; Назад в XMusic</span></a>
+                <a class="creator-nav-btn active" id="creatorHomeBtn" style="display: none;"><span>Главная</span></a>
+                <a class="creator-nav-btn" id="myTracksBtn" style="display: none;"><span>Мои треки</span></a>
+                <a class="creator-nav-btn" id="analyticsBtn" style="display: none;"><span>Аналитика</span></a>
+                <a class="creator-nav-btn admin-section" id="adminApplicationsBtn" style="display: none;"><span>Заявки в Creator</span></a>
+                <a class="creator-nav-btn admin-section" id="adminUsersBtn" style="display: none;"><span>Аккаунты</span></a>
+                <a class="creator-nav-btn admin-section" id="adminModerationBtn" style="display: none;"><span>Треки на модерации</span></a>
+                <a class="creator-nav-btn admin-section" id="adminStatsBtn" style="display: none;"><span>Статистика</span></a>
+                <a class="creator-nav-btn admin-section" id="adminCategoriesBtn" style="display: none;"><span>Категории</span></a>
             </nav>
             <div class="sidebar-footer">
                 <button class="logout-btn" id="logoutBtn" style="display: none;"><span>Выйти</span></button>
