--- a/index/index.html
+++ b/index/index.html
@@ -168,7 +168,7 @@
     <div class="player">
         <div class="player-header">
             <div class="track-info">
-                <img src="default.png" alt="Track Art" id="playerCover">
+                <img src="default.svg" alt="Track Art" id="playerCover">
                 <div>
                     <span class="title" id="playerTitle">Выберите медиа</span>
                     <span class="artist" id="playerArtist"></span>
@@ -179,7 +179,7 @@
         <div class="control-buttons-and-progress">
             <div class="control-buttons">
                 <button id="repeatBtn" class="control-btn repeat-btn" title="Повтор"><svg fill="currentColor" viewBox="0 0 24 24"><path d="M7 7h10v3l4-4-4-4v3H5v6h2V7zm10 10H7v-3l-4 4 4 4v-3h12v-6h-2v4z"/></svg></button>
-                <button id="prevBtn" class="control-btn" title="Назад"><svg fill="currentColor" viewBox="0 0 24 24"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"></path></svg></button>
+                <button id="prevBtn" class="control-btn" title="Назад"><svg fill="currentColor" viewBox="0 0 24 24"><path d="M16 4h2v16h-2V4zm-8 2h2v12H8V6z"/></svg></button>
                 <button class="play-button" id="playPauseBtn" title="Воспроизвести"><svg id="playIcon" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg><svg id="pauseIcon" style="display: none;" viewBox="0 0 24 24"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"></path></svg></button>
                 <button id="nextBtn" class="control-btn" title="Вперед"><svg fill="currentColor" viewBox="0 0 24 24"><path d="M16 4h2v16h-2V4zm-8 2h2v12H8V6z"/></svg></button>
                 <button id="favoritePlayerBtn" class="control-btn" title="Добавить в избранное">❤</button>
@@ -214,7 +214,7 @@
             <button class="close-btn" id="closeModerationBtn">&times;</button>
             <h2>Проверка трека</h2>
             <div class="moderation-info">
-                <img id="moderationPlayerCover" src="default.png" alt="Обложка">
+                <img id="moderationPlayerCover" src="default.svg" alt="Обложка">
                 <h3 id="moderationTitle">Название</h3>
                 <p id="moderationArtist">Исполнитель:</p>
                 <p id="moderationGenre">Жанр:</p>
