--- a/index/index.html
+++ b/index/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://www.google.com/recaptcha/api.js?render=6LfDl7QrAAAAALG2gcYm42BZzuCsY_I7edgnMFzJ"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="video-background-container" id="videoBackgroundContainer">
@@ -31,6 +32,7 @@
                     <a href="#" id="navLogout" class="nav-link" style="display: none;"><span>Выйти</span></a>
                 </div>
             </nav>
+            <nav class="admin-nav" id="adminNav" style="display: none;"></nav>
         </aside>
 
         <main class="main-content">
@@ -434,6 +436,9 @@
             </form>
         </div>
     </div>
+    
+    <div id="adminSection" class="admin-section" style="display: none;"></div>
+    <div id="creatorSection" class="creator-section" style="display: none;"></div>
 
     <script src="script.js"></script>
 </body>
