--- a/index/index.html
+++ b/index/index.html
@@ -295,7 +295,7 @@
             <form id="loginForm">
                 <div class="form-group"><label for="loginUsername">Логин</label><input type="text" id="loginUsername" required></div>
                 <div class="form-group"><label for="loginPassword">Пароль</label><input type="password" id="loginPassword" required></div>
-                <div class="g-recaptcha" data-sitekey="6LfDl7QrAAAAALG2gcYm42BZzuCsY_I7edgnMFzJ" data-callback="onRecaptchaSuccessLogin" data-expired-callback="onRecaptchaExpiredLogin"></div>
+                <div class="g-recaptcha" data-sitekey="6LfDl7QrAAAAALG2gcYm42BZzuCsY_I7edgnMFzJ"></div>
                 <button type="submit" class="submit-btn" id="loginSubmitBtn">Войти</button>
                 <button type="button" class="link-btn" id="switchToRegister">Перейти к регистрации</button>
             </form>
@@ -309,7 +309,7 @@
             <form id="registerForm">
                 <div class="form-group"><label for="registerUsername">Логин</label><input type="text" id="registerUsername" required></div>
                 <div class="form-group"><label for="registerPassword">Пароль</label><input type="password" id="registerPassword" required></div>
-                <div class="g-recaptcha" data-sitekey="6LfDl7QrAAAAALG2gcYm42BZzuCsY_I7edgnMFzJ" data-callback="onRecaptchaSuccessRegister" data-expired-callback="onRecaptchaExpiredRegister"></div>
+                <div class="g-recaptcha" data-sitekey="6LfDl7QrAAAAALG2gcYm42BZzuCsY_I7edgnMFzJ"></div>
                 <button type="submit" class="submit-btn" id="registerSubmitBtn">Зарегистрироваться</button>
                 <button type="button" class="link-btn" id="switchToLogin">Перейти ко входу</button>
             </form>
