--- a/index/index.html
+++ b/index/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+\<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -55,7 +55,7 @@
             </header>
 
             <div id="homeView" class="view active-view">
-                <section class="section xrecomen-section" id="xrecomenSection" style="display: none;">
+                <section class="section xrecomen-section" id="xrecomenSection">
                     <p id="nowPlayingText" class="now-playing-text"></p>
                     <button id="xrecomenBtn">
                         <span class="xrecomen-title">Xrecomen</span>
