--- a/index/index.html
+++ b/index/index.html
@@ -79,7 +79,14 @@
             <div id="categoriesView" class="view">
                 <section class="section">
                     <h2 class="section-title">Общее</h2>
-                    <div class="grid-container" id="popularCategoriesGrid"></div>
+                    <div class="grid-container" id="popularCategoriesGrid">
+                        <div class="category-card" data-category-id="all">
+                            <h3>Все треки</h3>
+                        </div>
+                        <div class="category-card" data-category-id="history">
+                            <h3>История прослушиваний</h3>
+                        </div>
+                    </div>
                 </section>
                 <section class="section">
                     <h2 class="section-title">Кастомные категории</h2>
