--- a/index/index.html
+++ b/index/index.html
@@ -78,17 +78,14 @@
             
             <div id="categoriesView" class="view">
                 <section class="section">
-                    <h2 class="section-title">Общее</h2>
-                    <div class="grid-container" id="popularCategoriesGrid">
+                    <h2 class="section-title">Категории</h2>
+                    <div class="grid-container" id="allCategoriesGrid">
                         <div class="category-card" data-category-id="all">
                             <h3>Все треки</h3>
                         </div>
-                        <div class="category-card" data-category-id="history">
-                            <h3>История прослушиваний</h3>
-                        </div>
                     </div>
                 </section>
-                <section class="section">
+                <section class="section" style="display: none">
                     <h2 class="section-title">Кастомные категории</h2>
                     <div class="grid-container" id="customCategoriesGrid"></div>
                 </section>
