--- a/index/index.html
+++ b/index/index.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="video-background-container" id="videoBackgroundContainer">
@@ -18,12 +17,7 @@
 
     <div class="app-container">
         <aside class="sidebar">
-            <a href="https://t.me/xload_xmusic" target="_blank" class="telegram-link">
-                <div class="logo-wrapper">
-                    <div class="logo" id="xmusicLogo">XMusic</div>
-                    <i class="fab fa-telegram-plane telegram-icon"></i>
-                </div>
-            </a>
+            <div class="logo" id="xmusicLogo">XMusic</div>
             <div class="logo" id="xcreatorLogo" style="display: none;">XCreator</div>
             <nav class="main-nav" id="xmusicNav">
                 <a href="#" id="navHome" class="nav-link active"><span>Главная</span></a>
@@ -37,13 +31,15 @@
                 <a class="creator-nav-btn active" id="creatorHomeBtn" style="display: none;"><span>Главная</span></a>
                 <a class="creator-nav-btn" id="myTracksBtn" style="display: none;"><span>Мои треки</span></a>
                 <a class="creator-nav-btn" id="analyticsBtn" style="display: none;"><span>Аналитика</span></a>
-                <a class="creator-nav-btn admin-section" id="adminPanelBtn" style="display: none;"><span>Админ-панель</span></a>
                 <a class="creator-nav-btn admin-section" id="adminApplicationsBtn" style="display: none;"><span>Заявки в Creator</span></a>
                 <a class="creator-nav-btn admin-section" id="adminUsersBtn" style="display: none;"><span>Аккаунты</span></a>
                 <a class="creator-nav-btn admin-section" id="adminModerationBtn" style="display: none;"><span>Треки на модерации</span></a>
                 <a class="creator-nav-btn admin-section" id="adminStatsBtn" style="display: none;"><span>Статистика</span></a>
                 <a class="creator-nav-btn admin-section" id="adminCategoriesBtn" style="display: none;"><span>Категории</span></a>
             </nav>
+            <div class="sidebar-footer">
+                <button class="logout-btn" id="logoutBtn" style="display: none;"><span>Выйти</span></button>
+            </div>
         </aside>
 
         <main class="main-content">
@@ -141,16 +137,6 @@
                                 </thead>
                                 <tbody id="analyticsTrackTableBody"></tbody>
                             </table>
-                        </div>
-                    </div>
-                </div>
-                <div id="adminPanelSection" class="creator-main-section" style="display: none;">
-                    <h2 class="section-title">Админ-панель</h2>
-                    <div class="admin-controls-panel">
-                        <button class="submit-btn" id="clearModerationBtn">Удалить все треки на проверке</button>
-                        <div class="toggle-control">
-                            <label for="registrationToggle">Разрешить регистрацию</label>
-                            <input type="checkbox" id="registrationToggle">
                         </div>
                     </div>
                 </div>
@@ -296,18 +282,12 @@
             <button class="close-btn" title="Закрыть">&times;</button>
             <h2>Настройки</h2>
             <div class="form-group">
-                <label for="opacityEnabledToggle">Размытие фона</label>
-                <input type="checkbox" id="opacityEnabledToggle">
-            </div>
-            <div class="form-group" id="opacitySliderContainer" style="display: none;">
                 <label for="opacitySlider">Непрозрачность интерфейса</label>
                 <div class="slider-wrapper">
                     <input type="range" id="opacitySlider" min="0.1" max="1" step="0.05">
                     <span id="opacityValue">50%</span>
                 </div>
             </div>
-            <hr>
-            <button class="submit-btn logout-btn" id="logoutBtn"><span>Выйти из аккаунта</span></button>
         </div>
     </div>
 
@@ -331,7 +311,7 @@
             <form id="registerForm">
                 <div class="form-group"><label for="registerUsername">Логин</label><input type="text" id="registerUsername" required></div>
                 <div class="form-group"><label for="registerPassword">Пароль</label><input type="password" id="registerPassword" required></div>
-                <button type="submit" class="submit-btn" id="registerSubmitBtn">Зарегистрироваться</button>
+                <button type="submit" class="submit-btn">Зарегистрироваться</button>
                 <button type="button" class="link-btn" id="switchToLogin">Перейти ко входу</button>
             </form>
         </div>
