--- a/index/index.html
+++ b/index/index.html
@@ -38,7 +38,6 @@
                 <a class="creator-nav-btn admin-section" id="adminCategoriesBtn" style="display: none;"><span>Категории</span></a>
             </nav>
             <div class="sidebar-footer">
-                <button class="logout-btn" id="logoutBtn" style="display: none;"><span>Выйти</span></button>
             </div>
         </aside>
 
@@ -288,6 +287,14 @@
                     <span id="opacityValue">50%</span>
                 </div>
             </div>
+            <div class="form-group">
+                <label for="blurToggle">Размытие фона</label>
+                <label class="switch">
+                    <input type="checkbox" id="blurToggle" checked>
+                    <span class="slider round"></span>
+                </label>
+            </div>
+            <button class="logout-btn" id="logoutBtn" style="display: none;"><span>Выйти</span></button>
         </div>
     </div>
 
