--- a/index/index.html
+++ b/index/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -55,7 +54,6 @@
 
             <div id="homeView" class="view active-view">
                 <section class="section xrecomen-section" id="xrecomenSection">
-                    <p id="nowPlayingText" class="now-playing-text"></p>
                     <button id="xrecomenBtn">
                         <span class="xrecomen-title">Xrecomen</span>
                         <span class="xrecomen-subtitle">Возможно, вам понравится</span>
@@ -162,6 +160,10 @@
                 </div>
             </div>
         </main>
+    </div>
+    
+    <div id="nowPlayingSection" class="now-playing-section">
+        <p id="nowPlayingText" class="now-playing-text">Сейчас ничего не играет</p>
     </div>
 
     <div class="player">
