--- a/index/index.html
+++ b/index/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -17,10 +17,8 @@
 
     <div class="app-container">
         <aside class="sidebar">
-            <div class="logo-container">
-                <div class="logo" id="xmusicLogo">XMusic</div>
-                <div class="logo" id="xcreatorLogo" style="display: none;">XCreator</div>
-            </div>
+            <div class="logo" id="xmusicLogo">XMusic</div>
+            <div class="logo" id="xcreatorLogo" style="display: none;">XCreator</div>
             <nav class="main-nav" id="xmusicNav">
                 <a href="#" id="navHome" class="nav-link active"><span>Главная</span></a>
                 <a href="#" id="navCategories" class="nav-link"><span>Категории</span></a>
