--- a/index/index.html
+++ b/index/index.html
@@ -184,7 +184,7 @@
             </div>
         </div>
         
-        <div class="player-footer">
+        <div class="control-buttons-and-progress">
             <div class="control-buttons">
                 <button id="repeatBtn" class="control-btn repeat-btn" title="Повтор">
                     <svg fill="currentColor" viewBox="0 0 24 24"><path d="M7 7h10v3l4-4-4-4v3H5v6h2V7zm10 10H7v-3l-4 4 4 4v-3h12v-6h-2v4z"/></svg>
