--- a/index/index.html
+++ b/index/index.html
@@ -57,7 +57,7 @@
                 <h1 id="viewTitle">Главная</h1>
                 <div class="header-controls">
                     <div class="search-bar-wrapper">
-                        <input type="text" id="searchInput" placeholder="Поиск...">
+                        <input type="text" id="searchInput" placeholder="Поиск трека или исполнителя...">
                     </div>
                 </div>
             </header>
@@ -84,6 +84,11 @@
                 </section>
             </div>
             
+            <div id="searchView" class="view">
+                <h2 class="section-title" id="searchResultsTitle">Результаты поиска</h2>
+                <div class="grid-container" id="searchResultsGrid"></div>
+            </div>
+
             <div id="categoriesView" class="view">
                 <section class="section">
                     <h2 class="section-title">Категории</h2>
