--- a/index/index.html
+++ b/index/index.html
@@ -69,6 +69,13 @@
                         <span class="xrecomen-title">Xrecomen</span>
                         <span class="xrecomen-subtitle">Возможно, вам понравится</span>
                     </button>
+                    <div class="equalizer" id="equalizer">
+                        <div class="equalizer-bar"></div>
+                        <div class="equalizer-bar"></div>
+                        <div class="equalizer-bar"></div>
+                        <div class="equalizer-bar"></div>
+                        <div class="equalizer-bar"></div>
+                    </div>
                 </section>
                 <section class="section" id="youLikeSection">
                     <h2 class="section-title">Вам нравятся</h2>
