--- a/index/index.html
+++ b/index/index.html
@@ -238,8 +238,7 @@
         </main>
     </div>
 
-    <div class="player">
-        
+    <div class="player player--default">
         <div class="player-style-default">
             <div class="player-header">
                 <div class="track-info">
@@ -290,7 +289,7 @@
             </div>
         </div>
 
-        <div class="player-style-copy" style="display: none;">
+        <div class="player-style-copy">
             <div class="copy-player-body">
                 <div class="copy-track-info">
                     <img src="default.svg" alt="Track Art" id="copyPlayerCover">
@@ -440,7 +439,6 @@
                     <button class="style-btn" data-style="copy">Copy</button>
                 </div>
             </div>
-            <button class="logout-btn" id="logoutBtn" style="display: none;"><span>Выйти</span></button>
         </div>
     </div>
 
