--- a/index/index.html
+++ b/index/index.html
@@ -89,8 +89,10 @@
                 <section class="section xrecomen-section" id="xrecomenSection">
                     <p id="nowPlayingText" class="now-playing-text"></p>
                     <button id="xrecomenBtn">
-                        <span class="xrecomen-title">Xrecomen</span>
-                        <span class="xrecomen-subtitle">Возможно, вам понравится</span>
+                        <div class="xrecomen-content">
+                           <span class="xrecomen-title">Xrecomen</span>
+                           <span class="xrecomen-subtitle">Возможно, вам понравится</span>
+                        </div>
                     </button>
                     <div class="equalizer" id="equalizer">
                         <div class="equalizer-bar"></div>
