--- a/index/index.html
+++ b/index/index.html
@@ -167,9 +167,23 @@
                                 <label for="youtubeQualitySelect">Выберите качество:</label>
                                 <select id="youtubeQualitySelect"></select>
                             </div>
-                            <button id="youtubeDownloadBtn" class="submit-btn" disabled>Скачать</button>
+                            <button id="youtubeDownloadBtn" class="submit-btn" disabled>Скачать на сервер</button>
                             <p id="youtubeStatus"></p>
                         </div>
+                    </div>
+
+                    <div id="youtubeProgressContainer" class="youtube-progress-container" style="display: none;">
+                        <p id="youtubeProgressStatusText">Загрузка на сервер...</p>
+                        <div class="progress-bar-wrapper">
+                            <div id="youtubeProgressBar" class="progress-bar-fill" style="width: 0%;"></div>
+                        </div>
+                        <span id="youtubeProgressPercentage">0%</span>
+                    </div>
+
+                    <div id="youtubePreviewContainer" class="youtube-preview-container" style="display: none;">
+                        <video id="youtubeVideoPreview" controls></video>
+                        <a id="youtubeFinalDownloadLink" href="#" class="submit-btn" download>Скачать файл</a>
+                        <p class="small-text">Файл будет удален с сервера через 10 минут.</p>
                     </div>
                 </div>
             </div>
