--- a/index/index.html
+++ b/index/index.html
@@ -339,36 +339,41 @@
                 </button>
                 <svg viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
                 <input type="range" id="volumeBar" min="0" max="1" step="0.01" value="1">
+            </div>
         </div>
-        <div class="player">
-            <div class="player-style-default">
-                <div class="track-info">
-                    <img src="default.svg" alt="Track Art" id="playerCover">
-                    <div>
-                        <span class="title" id="playerTitle">Выберите медиа</span>
-                        <span class="artist" id="playerArtist"></span>
-                    </div>
+        
+        <div class="player-style-copy" style="display: none;">
+            <div class="track-info">
+                <img src="default.svg" alt="Track Art" id="copyPlayerCover">
+                <div class="copy-track-text">
+                    <span class="title">Выберите медиа</span>
+                    <span class="artist"></span>
                 </div>
-                <div class="copy-main-controls">
-                    <button id="copyPrevBtn" class="control-btn" title="Назад">
-                        <svg fill="currentColor" viewBox="0 0 24 24"><path d="M6 6h2v12H6zm3.5 6l8.5 6V6z"/></svg>
-                    </button>
-                    <button class="play-button" id="copyPlayPauseBtn" title="Воспроизвести">
-                        <svg id="copyPlayIcon" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
-                        <svg id="copyPauseIcon" style="display: none;" viewBox="0 0 24 24"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"></path></svg>
-                    </button>
-                    <button id="copyNextBtn" class="control-btn" title="Вперед">
-                        <svg fill="currentColor" viewBox="0 0 24 24"><path d="M16 18h2V6h-2zM6 18l8.5-6L6 6z"/></svg>
-                    </button>
+            </div>
+            <div class="copy-main-controls">
+                <button id="copyPrevBtn" class="control-btn" title="Назад">
+                    <svg fill="currentColor" viewBox="0 0 24 24"><path d="M6 6h2v12H6zm3.5 6l8.5 6V6z"/></svg>
+                </button>
+                <button class="play-button" id="copyPlayPauseBtn" title="Воспроизвести">
+                    <svg id="copyPlayIcon" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
+                    <svg id="copyPauseIcon" style="display: none;" viewBox="0 0 24 24"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"></path></svg>
+                </button>
+                <button id="copyNextBtn" class="control-btn" title="Вперед">
+                    <svg fill="currentColor" viewBox="0 0 24 24"><path d="M16 18h2V6h-2zM6 18l8.5-6L6 6z"/></svg>
+                </button>
+            </div>
+            <div class="copy-secondary-controls">
+                <button id="copyFavoriteBtn" class="control-btn" title="Добавить в избранное">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/></svg>
+                </button>
+                <div class="copy-volume-controls">
+                    <svg viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
+                    <input type="range" id="copyVolumeBar" min="0" max="1" step="0.01" value="1">
                 </div>
-                <div class="copy-secondary-controls">
-                     <button id="copyFavoriteBtn" class="control-btn" title="Добавить в избранное">
-                       <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/></svg>
-                    </button>
-                    <div class="copy-volume-controls">
-                        <svg viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
-                        <input type="range" id="copyVolumeBar" min="0" max="1" step="0.01" value="1">
-                    </div>
+                <div class="copy-progress-bar-container">
+                    <span id="copyCurrentTime">0:00</span>
+                    <div class="copy-progress-filled"></div>
+                    <span id="copyDuration">0:00</span>
                 </div>
             </div>
         </div>
