--- a/index/index.html
+++ b/index/index.html
@@ -335,13 +335,12 @@
                 <button id="favoritePlayerBtn" class="control-btn" title="Добавить в избранное">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart">
                         <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/>
-                    </svg>
                 </button>
                 <svg viewBox="0 0 24 24"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"/></svg>
                 <input type="range" id="volumeBar" min="0" max="1" step="0.01" value="1">
         </div>
         <div class="player">
-            <div class="player-style-default">
+            <div class="player-style-copy">
                 <div class="track-info">
                     <img src="default.svg" alt="Track Art" id="playerCover">
                     <div>
